# Facultate

./: .gitignore
An1 Facultate/CSA/: String_7.asm  String_7.lst  new 1.asm  new 1.lst
An1 Facultate/CSA/Homework CSA Lab 10/: files_23.asm  files_23.lst  files_8.asm  files_8.lst  problem23.txt  problem8.txt
An1 Facultate/CSA/Homework CSA Lab 2/: Homework Additions and substractions on one byte Lab 2.asm  Homework Additions and substractions on one byte Lab 2.lst  Homework Additions and substractions on one word Lab 2.asm  Homework Additions and substractions on one word Lab 2.lst  Homework Multiplications and div_1 Lab 2.asm  Homework Multiplications and div_1 Lab 2.lst  Homework Multiplications and div_2 Lab 2.asm  Homework Multiplications and div_2 Lab 2.lst  Homework simple exercices Lab2.asm  Homework simple exercices Lab2.lst
An1 Facultate/CSA/Homework CSA Lab 3/: Add_Sub_signed.asm  Add_Sub_signed.lst  Mul_Div_1.asm  (+5 more)
An1 Facultate/Computational Logic/: Herlea_Stefan-Aleandru_ex4.3_predicateResolution.pptx  Herlea_Stefan_Alexandru_Exercise_11.pptx
An1 Facultate/FP/: New Calc.py  New Calc.txt
An1 Facultate/OOP/PregTest/Software Application/: CMakeLists.txt  Observer.h  issues.txt  main.cpp  users.txt
An1 Facultate/OOP/PregTest/Software Application/Entities/: Issue.cpp  Issue.h  User.cpp  User.h
An1 Facultate/OOP/PregTest/Software Application/QT/: Table_Model.cpp  Table_Model.h  User_Window.cpp  User_Window.h
An1 Facultate/OOP/PregTest/Software Application/Repositories/: Repository_Issue.cpp  Repository_Issue.h  Repository_User.cpp  Repository_User.h
(+820 files in other folders)
